[gd_scene load_steps=9 format=3 uid="uid://cikbsmemyx5v"]

[ext_resource type="PackedScene" uid="uid://chcmtwtia1s41" path="res://scenes/levels/base_level.tscn" id="1_vlj2g"]
[ext_resource type="Script" path="res://scripts/levelScripts/level_8_1.gd" id="2_ocj7v"]
[ext_resource type="FontFile" uid="uid://c5usytkhau5qg" path="res://assets/misc/Lilliput Steps.otf" id="3_evh4u"]
[ext_resource type="StyleBox" uid="uid://pl7u85rxhfye" path="res://resources/new_style_box_flat_normal.tres" id="4_olqgw"]
[ext_resource type="StyleBox" uid="uid://dirr82n77phow" path="res://resources/new_style_box_flat_hover.tres" id="5_gdcdo"]
[ext_resource type="StyleBox" uid="uid://cg54yh1dsa1xo" path="res://resources/new_style_box_flat_pressed.tres" id="6_vu7av"]
[ext_resource type="StyleBox" uid="uid://b5mq8sf7g0a5r" path="res://resources/new_style_box_empty.tres" id="7_u5p8f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e52nr"]
bg_color = Color(0.0235294, 0.27451, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)

[node name="Level_8_1" instance=ExtResource("1_vlj2g")]
script = ExtResource("2_ocj7v")

[node name="Label" type="Label" parent="." index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -646.0
offset_top = 30.0
offset_right = 646.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_evh4u")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_e52nr")
text = "Qual o número dessa questão?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="." index="1"]
offset_left = 260.0
offset_top = 273.0
offset_right = 610.0
offset_bottom = 373.0
theme_override_fonts/font = ExtResource("3_evh4u")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_olqgw")
theme_override_styles/hover = ExtResource("5_gdcdo")
theme_override_styles/pressed = ExtResource("6_vu7av")
theme_override_styles/focus = ExtResource("7_u5p8f")
text = "6"

[node name="Button2" type="Button" parent="." index="2"]
offset_left = 720.0
offset_top = 273.0
offset_right = 1070.0
offset_bottom = 373.0
theme_override_fonts/font = ExtResource("3_evh4u")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_olqgw")
theme_override_styles/hover = ExtResource("5_gdcdo")
theme_override_styles/pressed = ExtResource("6_vu7av")
theme_override_styles/focus = ExtResource("7_u5p8f")
text = "7"

[node name="Button3" type="Button" parent="." index="3"]
offset_left = 260.0
offset_top = 398.0
offset_right = 610.0
offset_bottom = 498.0
theme_override_fonts/font = ExtResource("3_evh4u")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_olqgw")
theme_override_styles/hover = ExtResource("5_gdcdo")
theme_override_styles/pressed = ExtResource("6_vu7av")
theme_override_styles/focus = ExtResource("7_u5p8f")
text = "8"

[node name="Button4" type="Button" parent="." index="4"]
offset_left = 720.0
offset_top = 398.0
offset_right = 1070.0
offset_bottom = 498.0
theme_override_fonts/font = ExtResource("3_evh4u")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_olqgw")
theme_override_styles/hover = ExtResource("5_gdcdo")
theme_override_styles/pressed = ExtResource("6_vu7av")
theme_override_styles/focus = ExtResource("7_u5p8f")
text = "9"

[node name="Button5" type="Button" parent="." index="5"]
offset_left = 720.0
offset_top = 524.0
offset_right = 1070.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("3_evh4u")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_olqgw")
theme_override_styles/hover = ExtResource("5_gdcdo")
theme_override_styles/pressed = ExtResource("6_vu7av")
theme_override_styles/focus = ExtResource("7_u5p8f")
text = "11"

[node name="Button6" type="Button" parent="." index="6"]
offset_left = 260.0
offset_top = 524.0
offset_right = 610.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("3_evh4u")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("4_olqgw")
theme_override_styles/hover = ExtResource("5_gdcdo")
theme_override_styles/pressed = ExtResource("6_vu7av")
theme_override_styles/focus = ExtResource("7_u5p8f")
text = "10"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
